--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.itkolleg</groupId>
-  <artifactId>mysql001</artifactId>
+  <artifactId>itkolleg_jdbc</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>mysql001</name>
